# image_analysis_lib

./: .gitignore  LICENSE  PICTURE_REVIEW_README.md  README.md  example.txt  pyproject.toml
.cursor/rules/: notes-directory-readonly.mdc
image_analysis_lib/: __init__.py  cli.py  config.py  duplicates.py  musiq.py  scoring.py
notes/: v000.000.001_create_shared_lib.md  v001.000.001_check_for_issues.md  v001.000.002_modify_files_processed.md  v001.000.003_add_test_with_pics.md  v001.000.004_pass_unresized_jpg.md  v001.000.005_try_on_mac.md  v001.000.006_rename_csv_field_names_to_match_image_collection.csv.md  v001.000.007_save_score_as_sortable_string.md  v001.000.008_correct_no_copy_status.md  v001.000.009_failed_macos_metal_install.md  v001.000.010_verify_pi5_install_tweak_cursor_rules.md  v001.000.011_change_defaults.md  v001.000.012_check_dups_only_same_folder.md  v001.000.013_possible_future_chg_dup_chks.md  v001.000.014_cache_ava_model.md
tests/: __init__.py  conftest.py  score_test_images.py  test_duplicates.py  test_musiq.py
